# Modeling-of-mobile-systems

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: backend.hpp  fft.hpp  funcs.hpp  gui.hpp  sharedData.hpp
practice_1/: README.md  main.cpp
src/: backend.cpp  fft.cpp  funcs.cpp  gui.cpp  main.cpp
